# particle-tracing

./: MDiscField.m  README.md  cmptraj_earth.m  cmptraj_jupiter.m  cmptraj_saturn.m  dipbtracer.m  diptracer.m  downloadMDiscFiles.sh  getBvectordipole.m  getbounceperiod.m  getdriftperiod.m  leasqr.m  mdiscMagneticField3D.m  mdtracer.m  runs.m  testmdisc.m  trajectory_main.m
data/: downloadMDiscFiles.sh
matlab/: MDiscField.m  check_length_scales.m  cmptraj_earth.m  cmptraj_jupiter.m  cmptraj_saturn.m  dipbtracer.m  dipoleMagneticField3D.m  diptracer.m  example_length_scales.m  example_trajectory.m  fitTb.m  fitTd.m  getBmoddipole.m  getBvectordipole.m  getbounceperiod.m  mdbtracer.m  (+8 more)
python/: .gitignore  .travis.yml  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
python/examples/: Rec_plots_2dim.py  ex_traj.py  example_trajectory.py  run_mdbtracer.py  run_simulRB.py
python/notebooks/: dipoleMagneticField3D.ipynb  mdbtracer.ipynb  mdiscMagneticField3D.ipynb  plot_mdisc.ipynb
python/pymagdisc/: config.py
python/pymagdisc/analysis/: physics.py
python/pymagdisc/bfield/: interpolateMagneticField.py  magneticField3D.py
python/pymagdisc/bfield/tests/: test_magneticField3D.py
python/pymagdisc/data/: load_data.py
python/pymagdisc/data/tests/: test_load_data.py
python/pymagdisc/tracer/: getbounceperiod.py  getdriftperiod.py  mdbtracer.py  mdbtracerRM.py  particle.py  si_constants.py
python/pymagdisc/vis/: plot_compare_contours_alpha.py  plot_compare_mdisc_dipole.py  plot_mdisc.py
python/tests/: test_load_data.py  test_magneticField3D.py
